# FinDS-AgentBench

./: .gitignore  README.md  pyproject.toml
agents/: README.md  external_agent_handoff.md  external_agent_registration_template.yaml  external_agent_registry.yaml
baselines/: README.md
data/: README.md
docs/: data_license_register.md  failure_taxonomy.md  publication_roadmap.md  related_work_matrix.md  research_scope.md
papers/: README.md
reports/: README.md
runs/: README.md
schemas/: artifact_contract.yaml  run_manifest_schema.yaml  scoring_schema.yaml  task_schema.yaml
scripts/: build_benchmark_manifest.py  build_data_manifests.py  build_external_agent_readiness.py  build_manual_audit_workflow.py  build_methodology_calibration_workflow.py  build_pilot_manuscript.py  build_pilot_paper_artifacts.py  build_pilot_reference_results.py  build_pilot_release.py  build_pilot_statistical_artifacts.py  build_publication_gate_manifest.py  build_related_work_artifacts.py  build_release_archive.py  build_run_report.py  build_submission_package_manifest.py  build_submission_readiness.py  build_task_cards.py  check_pilot_manuscript_formatting.py  check_pilot_release_reproducibility.py  create_run_manifest.py  download_front_end_spread_widening_v0.py  download_usd_afe_vs_eme_relative_direction_v0.py  download_usd_broad_direction_v0.py  download_yield_curve_10y2y_steepening_v0.py  download_yield_curve_10y3mo_steepening_v0.py  download_yield_direction_treasury10y_v0.py  generate_leakage_audit_temporal_split_v0.py  generate_synthetic_event_response_v0.py  (+71 more)
(+239 files in other folders)
